reflect-demo/tests/success/reflect_field_type_generic.rs
#[derive(reflect::Input, reflect::Output)]
struct MyStruct {
    field: Vec<u32>,
}

fn main() {}
