reflect-demo/tests/errors/invalid_reflect_type_lifetime_generic.rs
#[derive(reflect::Input, reflect::Output)]
struct MyStruct<'a> {
    field: &'a u8,
}

fn main() {}
